2009-02-13  Sam Steingold  <sds@gnu.org>

	* .gdbinit (error_notreached): replaces fehler_notreached

2009-02-12  Sam Steingold  <sds@gnu.org>

	avoid preprocessor instructions inside macro invocations
	* spvw_garcol.d (fill_relocation_memory_regions): define
	SET_HEAPNR and MARK_GEN1 for use in for_all_threads()

2009-01-26  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-float-to-string): return the 6th value:
	roundup, meaning that rounding up 9 -> 10 lengthens the number
	(format-general-float): use it to fix (FORMAT NIL "~G" 1.0d24)

2009-02-11  Vladimir Tzankov  <vtzankov@gmail.com>

	avoid preprocessor instructions inside macro invocations
	* spvw.d (ENABLE_DUMMY_ALLOCCOUNT) [MULTITHREAD & DEBUG_GCSAFETY]:
	toggle the dummy alloccount when executing in signal handling thread -
	no lisp thread is associated with it and no real alloccount
	(signal_handler_thread): use it

2009-02-10  Sam Steingold  <sds@gnu.org>

	avoid preprocessor instructions inside macro invocations
	* error.d (uint_type_object, sint_type_object): add
	(check_uint_replacement, check_sint_replacement): use them
	(ulong_type_object, slong_type_object): add
	(check_ulong_replacement, check_slong_replacement): use them
	* spvw_genera1.d (build_old_generation_cache):
	take #ifdef out of dotimespL

2009-02-06  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (pin_varobject): oops. revert: objects of type gcv_object_t
	are verboten outside of GC

2009-02-06  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (ASSERT_SAFE_TO_PIN) [MULTITHREAD]: aborts if
	pin_varobject() is used when GC can run at the same time (only
	with DEBUG_SPVW)
	(pin_varobject) [MULTITHREAD]: use it
	(ASSERT_VALID_UNPIN) [MULTITHREAD]: checks that the object to be
	unpinned is at the start of pinned objects chain. this should always
	be the case (there are unwind-protect frames for every pinned object)
	(unpin_varobject_i): use it. simplify it

2009-02-06  Vladimir Tzankov  <vtzankov@gmail.com>
